When client or robot disconnect remove from master control list

--- a/server/src/index.html
+++ b/server/src/index.html
@@ -160,6 +160,10 @@
                 createField(`You are the master of robot ${robotId}`);
             });
 
+            socket.on("master error", (msg) => {
+                createField(`Master error : ${msg}`);
+            });
+
             // connect
             formConnect.addEventListener("submit", function (e) {
                 e.preventDefault();
