--- a/server/src/index.html
+++ b/server/src/index.html
@@ -5,7 +5,7 @@
         <style>
             body {
                 margin: 0;
-                padding-bottom: 3rem;
+                padding-bottom: 6rem;
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                     Roboto, Helvetica, Arial, sans-serif;
             }
@@ -162,6 +162,14 @@
 
             socket.on("master error", (msg) => {
                 createField(`Master error : ${msg}`);
+            });
+
+            socket.on("move", (mvt) => {
+                createField(`received move from client : ${mvt}`);
+            });
+
+            socket.on("move error", (msg) => {
+                createField(`Move error : ${msg}`);
             });
 
             // connect
